--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,65 +2,29 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Muhammad Moeen uddin
     - name: Date of Birth
-      value: 14th March 1879
+      value: 9th August 1981
     - name: Languages
-      value: English, German
+      value: English, Urdu, Punjabi, Pushtu
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MS Computer Sc
+      institution: Lahore University of Management Science, Lahore, Pakistan
+      year: 2012
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
-
+        - Intelligent Computing, Pervasive Computing, Data mining, Advanced Topics in Data mining
+        - Recommendation Systems, Social Networks
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Visiting Lecturer Web design and development
+      institution: Information Technology University
+      year: 2024 
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
+        - Taught course on MERN stack.
 - title: Open Source Projects
   type: time_table
   contents:
@@ -71,27 +35,21 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2001 - 2005
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
+        - Need-cum-merit Fee waiver award 50%
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Recommender Systems.
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Short text/Social media recommendation
+        - Cognitive Behavior and Personas
+    - title: Trustworthy AI Augementation.
       items:
-        - Description 1.
-        - Description 2.
+        - Creative and cultural nuances in collaborative work
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Reading, Football, and Poetry .
